--- a/ver.2/question.html
+++ b/ver.2/question.html
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -75,5 +74,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="questionScript.js"></script>
-
-</body></html>
+	</body>
+</html>
