implememt result page

--- a/ver.2/question.html
+++ b/ver.2/question.html
@@ -33,42 +33,41 @@
     </nav>
 
     <div class="container">
-
-      <div class="question-area">
-        <h2 id="question-head"></h2>
-        <p id="question-text"></p>
-      </div>
-			
-			<div id="type-checkbox">
-				<div id="checkbox-ans" class="answer-area">
+			<div class="content">
+				<div class="question-area">
+					<h2 id="question-head"></h2>
+					<p id="question-text"></p>
 				</div>
-				<button type="button" class="btn" id="submitB">Submit</button>
-				<p id="counted">counted</p>
-				<p id="text">aaaaaaaa</p>
-      </div>
-			
-			<div id="type-yesno">
-				<div class="answer-area">
+
+				<div id="type-checkbox">
+					<div id="checkbox-ans" class="answer-area">
+					</div>
+					<button type="button" class="btn" id="submitB">Submit</button>
+					<p id="counted">counted</p>
+					<p id="text">aaaaaaaa</p>
+				</div>
+
+				<div id="type-yesno">
+					<div class="answer-area">
+						<div class="col-md-6 collumn-but">
+						<button id="but1" type="button" class="btn btn-default btn-lg btn-block answer-button"></button>
+					</div>
+
 					<div class="col-md-6 collumn-but">
-          <button id="but1" type="button" class="btn btn-default btn-lg btn-block answer-button">Yes</button>
-        </div>
+						<button id="but2" type="button" class="btn btn-default btn-lg btn-block answer-button"></button>
+					</div>
 
-        <div class="col-md-6 collumn-but">
-          <button id="but2" type="button" class="btn btn-default btn-lg btn-block answer-button">No</button>
-        </div>
-
-        <div class="col-md-6 collumn-but">
-          <button id="but3" type="button" class="btn btn-default btn-lg btn-block answer-button">blah blah adfa</button></div>
-        </div>
+					<div class="col-md-6 collumn-but">
+						<button id="but3" type="button" class="btn btn-default btn-lg btn-block answer-button"></button></div>
+					</div>
 				</div>
-      </div>
-			
-<!--
-      <button type="button" id="back-button" class="btn btn-default btn-lg">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
-      </button>
--->
-			
+
+	<!--
+				<button type="button" id="back-button" class="btn btn-default btn-lg">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
+				</button>
+	-->
+			</div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
