ver1: edited change page bug

--- a/ver.1/question.html
+++ b/ver.1/question.html
@@ -24,7 +24,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul id="navChoice" class="nav navbar-nav">
-            <li class="active"><a href="roughtly_test.html">Roughly Test</a></li>
+            <li class="active"><a href="javascript:window.location.reload(true)">Roughly Test</a></li>
             <li><a href="../ver.2/treatment_test.html">Treatment Test</a></li>
           </ul>
         </div>
